.k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: skore-ts-template-svc
  namespace: skore-ts-template
  labels:
    name: skore-ts-template
spec:
  selector:
    name: skore-ts-template
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
